# proxy-router/internal/handlers/httphandlers/http.go
@@ -55,7 +55,7 @@ func CreateHTTPServer(log lib.ILogger, controllers ...Registrable) *gin.Engine {
 
 	r.Use(cors.New(cors.Config{
 		AllowOrigins: []string{"*"},
-		AllowHeaders: []string{"session_id", "model_id"},
+		AllowHeaders: []string{"session_id", "model_id", "chat_id"},
 	}))
 
 	// r.Use(RequestLogger(log))
